hive/honeys/gatus/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gatus
  namespace: gatus-k8s
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`status.savew.dev`)
      priority: 10
      services:
        - kind: Service
          name: gatus
          namespace: gatus-k8s
          passHostHeader: true
          port: 80
          scheme: http
  tls:
    domains:
      - main: status.mtaha.dev
    secretName: wildcard-savew.dev-tls
